--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
     <head>
         <met#aeb3b8et="utf-8">
         <title>Currículo</title>
@@ -76,7 +76,7 @@
                                 <span class="fw-medium text-primary">Aniversário:</span> 28 de Janeiro 2002
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Phone:</span> (19)991879903
+                                <span class="fw-medium text-primary">Phone:</span> 19)991879903
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Email:</span> lucas.edu.ca@hotmail.com
